--- a/index.html
+++ b/index.html
@@ -1,20 +1,79 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <title>Example</title>
 
-      <script src="vendor.bundle.js" type="text/javascript" charset="utf-8" defer></script>
-      <script src="bundle.js" type="text/javascript" charset="utf-8" defer></script>
-    </head>
-    <body class="container-fluid">
-      <h1>Example</h1>
+  <head>
+    <title>TIC-TAC-TOE</title>
+    <meta charset="utf-8">
+    <script src="vendor.bundle.js" type="text/javascript" charset="utf-8" defer></script>
+    <script src="bundle.js" type="text/javascript" charset="utf-8" defer></script>
+  </head>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-      est laborum.</p>
-    </body>
+  <body>
+    <header>
+      <h1 class='title'>TIC-TAC-TOE</h1>
+      <form id="sign-in">
+        <fieldset>
+          <legend>Sign in!</legend>
+          <input type="email" name="credentials[email]" placeholder="Email">
+          <br>
+          <input type="password" name="credentials[password]"
+          placeholder="Password">
+          <input type="submit" value="Sign In!">
+        </fieldset>
+      </form>
+
+      <a href="#">New user? Click here to sign-up!</a>
+        <!-- function to unhide sign-up -->
+
+    <!-- Initally hidden
+      <form id="sign-up">
+        <fieldset>
+          <legend>Sign up!</legend>
+          <input type="email" name="credentials[email]" placeholder="Email">
+          <br>
+          <input type="password" name="credentials[password]"
+          placeholder="Password">
+          <br>
+          <input type="password" name="credentials[password_confirmation]"
+          placeholder="Confirm Password">
+          <input type="submit" value="Sign Up!">
+        </fieldset>
+      </form> -->
+
+      <h3 class='instructions'>Instructions</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+culpa qui officia deserunt mollit anim id est laborum.</p>
+      <hr>
+      <div class='settings'>
+        <h3>Settings</h3>
+          <p>Option 1</p>
+          <p>Option 2</p>
+          <p>Option 3</p>
+        <!-- settings go here -->
+        <!-- <label class="switch">
+          <input type="checkbox">
+          <div class="slider round"><p>Button</p></div>
+        </label> -->
+      </div>
+    </header>
+
+    <div class='game-container'>
+      <button>
+        <h3 class='new-game'>New Game</h3>
+      </button>
+      <div class='game-board'>
+        <!-- intially hidden -->
+        <!-- game board goes here -->
+      </div>
+    </div>
+
+    <footer>
+      <h5>Game created by @willmcbride</h5>
+    </footer>
+
+  </body>
 </html>
