Edit scss and html indexes.
Add google font references to html and comment font-family names to scss.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <script src="vendor.bundle.js" type="text/javascript" charset="utf-8" defer></script>
     <script src="bundle.js" type="text/javascript" charset="utf-8" defer></script>
+    <link href="https://fonts.googleapis.com/css?family=Bungee|Bungee+Shade|Rubik|VT323" rel="stylesheet">
   </head>
 
   <body>
@@ -40,6 +41,7 @@
         </fieldset>
       </form> -->
 
+<!-- ...does anyone actually need instructions? -->
       <h3 class='instructions'>Instructions</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
