--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   <body>
     <header>
       <h1 class='title'>TIC-TAC-TOE</h1>
+
       <form id="sign-in">
         <fieldset>
-          <legend>Sign in!</legend>
+          <legend class="sign-in">Sign in!</legend>
           <input type="email" name="credentials[email]" placeholder="Email">
           <br>
           <input type="password" name="credentials[password]"
@@ -22,59 +23,145 @@
           <input type="submit" value="Sign In!">
         </fieldset>
       </form>
+      <p>New user?<a href="#"> Click here to sign-up!</a></p>
 
-      <a href="#">New user? Click here to sign-up!</a>
-        <!-- function to unhide sign-up -->
+  <!-- Initially hidden
+  Note:
+      - Find something better than span if possible
+      - Need to write jQuery to put username in place of willmcbride1 -->
+      <div class='user-welcome'>
+        <p> Hi, <span>willmcbride1</span>!</p>
+        <span class="glyphicons glyphicons-cogwheel"></span>
+      </div>
 
-    <!-- Initally hidden
+    <!-- Initially hidden-->
       <form id="sign-up">
         <fieldset>
           <legend>Sign up!</legend>
           <input type="email" name="credentials[email]" placeholder="Email">
+          <input type="email" name="credentials[user_name]" placeholder="User Name">
           <br>
           <input type="password" name="credentials[password]"
           placeholder="Password">
-          <br>
           <input type="password" name="credentials[password_confirmation]"
           placeholder="Confirm Password">
           <input type="submit" value="Sign Up!">
         </fieldset>
-      </form> -->
+      </form>
 
-<!-- ...does anyone actually need instructions? -->
-      <h3 class='instructions'>Instructions</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-culpa qui officia deserunt mollit anim id est laborum.</p>
-      <hr>
-      <div class='settings'>
-        <h3>Settings</h3>
-          <p>Option 1</p>
-          <p>Option 2</p>
-          <p>Option 3</p>
-        <!-- settings go here -->
-        <!-- <label class="switch">
-          <input type="checkbox">
-          <div class="slider round"><p>Button</p></div>
-        </label> -->
+      <!-- initially hidden -->
+      <form id="change-password">
+        <fieldset>
+          <legend>Change Password</legend>
+          <input type="password" name="passwords[old]"
+          placeholder="Current Password">
+          <input type="password" name="passwords[new]"
+          placeholder="New Password">
+          <input type="submit" value="Change Password">
+        </fieldset>
+      </form>
+
+      <!-- initially hidden -->
+      <form id="sign-out">
+        <fieldset>
+          <legend>Sign Out</legend>
+          <input type="submit" value="Sign Out">
+        </fieldset>
+      </form>
+
+      <!--  Sign Up Modal-->
+      <div class="modal fade" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+
+              <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+
+              <h4 class="modal-title" id="myModalLabel">Sign Up</h4>
+              
+            </div>
+
+            <div class="modal-body">
+              <input type="text" placeholder="Email">
+              <input type="email" name="credentials[user_name]" placeholder="User Name">
+              <input type="password" placeholder="Password">
+              <input type="password" placeholder="Re-enter password">
+            </div>
+
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" id="sign-up-button" data-dismiss="modal">Sign Up</button>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
-
-    <div class='game-container'>
-      <button>
+    <hr>
+    <div class='container game-container'>
+      <button id="new-game" class="new-game">
         <h3 class='new-game'>New Game</h3>
       </button>
-      <div class='game-board'>
-        <!-- intially hidden -->
-        <!-- game board goes here -->
+
+      <!-- Display of players turn -->
+      <h3 id="player-turn" class="player-turn">
+      </h3>
+
+      <!--  Game Over Modal-->
+      <div class="modal fade" id="gameOverModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="gameOverModalLabel">Game Over!</h4>
+            </div>
+            <div class="modal-body">
+            <!-- insert game result text in <h3> below  -->
+            <h3 class="modal--subtitle" id="gameResultModalLabel"></h3>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default play-again" id="play-again-button" data-dismiss="modal">Play Again</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container game-board">
+          <div class="row board-row">
+            <div class="col-xs-4 game-cell">
+            </div>
+            <div class="col-xs-4 game-cell">
+            </div>
+            <div class="col-xs-4 game-cell">
+            </div>
+          </div>
+
+          <div class="row board-row">
+            <div class="col-xs-4 game-cell">
+            </div>
+            <div class="col-xs-4 game-cell">
+            </div>
+            <div class="col-xs-4 game-cell">
+            </div>
+          </div>
+
+          <div class="row board-row">
+            <div class="col-xs-4 game-cell">
+            </div>
+            <div class="col-xs-4 game-cell">
+            </div>
+            <div class="col-xs-4 game-cell">
+            </div>
+          </div>
       </div>
     </div>
 
     <footer>
-      <h5>Game created by @willmcbride</h5>
+      <h5>Game created by Will McBride</h5>
     </footer>
 
   </body>
