Add div to index
Add div with class "sign-in-prompt" to wrap sign-in form and the <p>
that follows prompting sign-up.

--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
     <header>
       <h1 class='title'>TIC-TAC-TOE</h1>
 
-      <form id="sign-in">
-        <fieldset>
-          <input type="email" name="credentials[email]" placeholder="Email">
-          <br>
-          <input type="password" name="credentials[password]"
-          placeholder="Password">
-          <input type="submit" value="Sign In!">
-        </fieldset>
-      </form>
-      <p>New user? <a id="sign-up-link">Click here to sign-up!</a></p>
+      <div class = "sign-in-prompt">
+        <form id="sign-in">
+          <fieldset>
+            <input type="email" name="credentials[email]" placeholder="Email">
+            <br>
+            <input type="password" name="credentials[password]"
+            placeholder="Password">
+            <input type="submit" value="Sign In!">
+          </fieldset>
+        </form>
+        <p>New user? <a id="sign-up-link">Click here to sign-up!</a></p>
+      </div>
 
   <!-- Initially hidden
   Note:
