--- a/index.html
+++ b/index.html
@@ -12,38 +12,39 @@
   <body>
     <header>
       <h1 class='title'>TIC-TAC-TOE</h1>
+      <div class='header-box'>
+        <div id="sign-in-prompt" class = "sign-in-prompt">
+          <form id="sign-in">
+            <fieldset>
+              <input type="email" name="credentials[email]" placeholder="Email">
+              <br>
+              <input type="password" name="credentials[password]"
+              placeholder="Password">
+              <input type="submit" value="Sign In!">
+            </fieldset>
+          </form>
+          <p class="new-user-text">
+            New user? <a id="sign-up-link" class="sign-up-link">
+              Click here</a> to sign-up now!
+          </p>
+        </div>
 
-      <div id="sign-in-prompt" class = "sign-in-prompt">
-        <form id="sign-in">
-          <fieldset>
-            <input type="email" name="credentials[email]" placeholder="Email">
-            <br>
-            <input type="password" name="credentials[password]"
-            placeholder="Password">
-            <input type="submit" value="Sign In!">
-          </fieldset>
-        </form>
-        <p class="new-user-text">
-          New user? <a id="sign-up-link" class="sign-up-link">
-            Click here to sign-up!</a>
-        </p>
-      </div>
-
-        <!-- Initially hidden
-        Note:
-      - Find something better than span if possible
-      - Need to write jQuery to put username in place of willmcbride1 -->
-      <div class='user-welcome' id="user-welcome">
-        <h4 class="welcome-msg"> Hi,
-          <span
-          id="user-name-welcome"
-          class="user-name-welcome">
-          <!-- styling placeholder -->
-          willmcbride1</span>!
-        </h4>
-        <button type="button" class="btn btn-default btn-lg cog-btn">
-          <span class="glyphicon glyphicon-cog" aria-hidden="true"><!-- empty span --></span>
-        </button>
+          <!-- Initially hidden
+          Note:
+        - Find something better than span if possible
+        - Need to write jQuery to put username in place of willmcbride1 -->
+        <div class='user-welcome' id="user-welcome">
+          <h4 class="welcome-msg"> Hi,
+            <span
+            id="user-name-welcome"
+            class="user-name-welcome">
+            <!-- styling placeholder -->
+            willmcbride1</span>
+          </h4>
+          <button type="button" class="btn btn-default btn-lg cog-btn">
+            <span class="glyphicon glyphicon-cog" aria-hidden="true"><!-- empty span --></span>
+          </button>
+        </div>
       </div>
 
       <!-- Initially hidden-->
@@ -100,10 +101,10 @@
           <input type="submit" value="Sign Out">
         </fieldset>
       </form>
-
-
     </header>
+
     <hr>
+
     <div class='container game-container'>
       <button id="new-game" class="new-game-button">
         <h3 class='new-game-text'>New Game</h3>
