Edit breakpoints to position game-board
Changes
  - Apply breakpoint media queries to game-board

Further Changes needed:
  - Apply breakpoint formatting to font-size

--- a/index.html
+++ b/index.html
@@ -123,8 +123,7 @@
 
       <!-- Display of players turn
           using placeholder currently-->
-      <h2 id="player-turn" class="player-turn">Player X's Turn
-      </h2>
+      <h2 id="player-turn" class="player-turn">Player X's Turn</h2>
 
       <!--  Game Over Modal-->
       <div class="modal fade" id="gameOverModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
