Edit authorization of user
Working:
  - Clicking new game without sign in prompts warning
  - New user can be registered

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             <div class="modal-body">
               <form id="sign-up">
                 <fieldset>
-                  <input type="text" placeholder="Email">
-                  <input type="email" name="credentials[user_name]" placeholder="User Name">
+                  <input type="email" name="credentials[email]" placeholder="Email">
+                  <!-- <input type="text" name="credentials[user_name]" placeholder="User Name"> -->
                   <br>
                   <input type="password" name="credentials[password]" placeholder="Password">
                   <input type="password" name="credentials[password_confirmation]" placeholder="Confirm Password">
