--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             id="user-name-welcome"
             class="user-name-welcome">
             <!-- styling placeholder -->
-            willmcbride1</span>
+            <!--willmcbride1-->></span>
           </h4>
           <button type="button" class="btn btn-default btn-lg cog-btn">
             <span class="glyphicon glyphicon-cog" aria-hidden="true"><!-- --></span>
@@ -104,20 +104,22 @@
     </header>
 
     <hr>
-    <div id="sign-in-failure" class="alert alert-danger sign-in-alert-danger" role="alert">
+    <div
+    id="sign-in-failure"
+    class="alert alert-danger sign-in-alert-danger"
+    role="alert">
       <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true">
       <!-- --></span>
       <span class="sr-only">Error:</span>
-      The account email or password you entered is incorrect.
-    </div>
-    <div class='container game-container'>
+      The account email or password you entered is incorrect.</div>
 
+    <div class='container game-container'>
       <!-- Initially hidden-->
       <!-- alert should trigger if new-game clicked before player sign in -->
       <button id="new-game" class="new-game-button">
         <h3 class='new-game-text'>New Game</h3>
       </button>
-      <div id="sign-in-warning" class="alert alert-danger" role="alert">
+      <div id="sign-in-warning" class="alert alert-danger no-sign-up-alert-danger" role="alert">
         <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true">
         <!-- --></span>
         <span class="sr-only">Error:</span>
@@ -132,7 +134,8 @@
       <h2 id="player-turn" class="player-turn">Player X's Turn</h2>
 
       <!--  Game Over Modal-->
-      <div class="modal fade" id="gameOverModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal fade" id="gameOverModal" tabindex="-1" role="dialog"
+      aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
