--- a/index.html
+++ b/index.html
@@ -81,6 +81,25 @@
         </div>
       </div>
 
+      <div class="modal fade" id="signUpSuccessModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <h3>Sign up succesful! Please sign in now.</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+
 
       <!-- initially hidden-->
       <form id="change-password">
