--- a/index.html
+++ b/index.html
@@ -116,29 +116,31 @@
       <!-- initially hidden -->
       <form id="sign-out">
         <fieldset>
-          <legend>Sign Out</legend>
           <input type="submit" value="Sign Out">
         </fieldset>
       </form>
     </header>
 
     <hr>
-    <div
-    id="sign-in-failure"
-    class="alert alert-danger sign-in-alert-danger"
-    role="alert">
-      <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true">
-      <!-- --></span>
-      <span class="sr-only">Error:</span>
-      The account email or password you entered is incorrect.</div>
-
-    <div class='container game-container'>
+    <div class='wrapper'>
+      <div
+      id="sign-in-failure"
+      class="alert alert-danger sign-in-alert-danger"
+      role="alert">
+        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true">
+        <!-- --></span>
+        <span class="sr-only">Error:</span>
+        The account email or password you entered is incorrect.
+      </div>
       <!-- Initially hidden-->
       <!-- alert should trigger if new-game clicked before player sign in -->
-      <button id="new-game" class="new-game-button">
+      <button id="new-game-btn" class="new-game-button">
         <h3 class='new-game-text'>New Game</h3>
       </button>
-      <div id="sign-in-warning" class="alert alert-danger no-sign-up-alert-danger" role="alert">
+      <div
+      id="sign-in-warning"
+      class="alert alert-danger no-sign-up-alert-danger"
+      role="alert">
         <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true">
         <!-- --></span>
         <span class="sr-only">Error:</span>
@@ -148,60 +150,61 @@
       </div>
 
 
-      <!-- Display of players turn
-          using placeholder currently-->
-      <h2 id="player-turn" class="player-turn">Player X's Turn</h2>
+      <div class='container game-container' id='game-container'>
+        <!-- Display of players turn
+            using placeholder currently-->
+        <h2 id="player-turn" class="player-turn">Player X's Turn</h2>
 
-      <!--  Game Over Modal-->
-      <div class="modal fade" id="gameOverModal" tabindex="-1" role="dialog"
-      aria-labelledby="myModalLabel">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <h4 class="modal-title" id="gameOverModalLabel">Game Over!</h4>
-            </div>
-            <div class="modal-body">
-            <!-- insert game result text in <h3> below  -->
-            <h3 class="modal--subtitle" id="gameResultModalLabel"></h3>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default play-again" id="play-again-button" data-dismiss="modal">Play Again</button>
+        <!--  Game Over Modal-->
+        <div class="modal fade" id="gameOverModal" tabindex="-1" role="dialog"
+        aria-labelledby="myModalLabel">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="gameOverModalLabel">Game Over!</h4>
+              </div>
+              <div class="modal-body">
+              <!-- insert game result text in <h3> below  -->
+              <h3 class="modal--subtitle" id="gameResultModalLabel"></h3>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default play-again" id="play-again-button" data-dismiss="modal">Play Again</button>
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="container game-board" id="game-board">
-          <div class="row board-row">
-            <div class="col-xs-4 game-cell">
+        <div class="container game-board" id="game-board">
+            <div class="row board-row">
+              <div class="col-xs-4 game-cell">
+              </div>
+              <div class="col-xs-4 game-cell">
+              </div>
+              <div class="col-xs-4 game-cell">
+              </div>
             </div>
-            <div class="col-xs-4 game-cell">
-            </div>
-            <div class="col-xs-4 game-cell">
-            </div>
-          </div>
 
-          <div class="row board-row">
-            <div class="col-xs-4 game-cell">
+            <div class="row board-row">
+              <div class="col-xs-4 game-cell">
+              </div>
+              <div class="col-xs-4 game-cell">
+              </div>
+              <div class="col-xs-4 game-cell">
+              </div>
             </div>
-            <div class="col-xs-4 game-cell">
-            </div>
-            <div class="col-xs-4 game-cell">
-            </div>
-          </div>
 
-          <div class="row board-row">
-            <div class="col-xs-4 game-cell">
+            <div class="row board-row">
+              <div class="col-xs-4 game-cell">
+              </div>
+              <div class="col-xs-4 game-cell">
+              </div>
+              <div class="col-xs-4 game-cell">
+              </div>
             </div>
-            <div class="col-xs-4 game-cell">
-            </div>
-            <div class="col-xs-4 game-cell">
-            </div>
-          </div>
+        </div>
       </div>
     </div>
-
     <footer>
       <h5 class="credit">Game created by Will McBride</h5>
     </footer>
