Make new-game.click trigger api.index
- Stated above

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </header>
 
     <hr>
-    <div class='wrapper'>
+    <main class='content'>
       <div
       id="sign-in-failure"
       class="alert alert-danger sign-in-alert-danger"
@@ -204,7 +204,7 @@
             </div>
         </div>
       </div>
-    </div>
+    </main>
     <footer>
       <h5 class="credit">Game created by Will McBride</h5>
     </footer>
