Make board post letter in clicked cell
- Only posts small x
- Does not alternate yet

--- a/index.html
+++ b/index.html
@@ -177,29 +177,29 @@
 
         <div class="container game-board" id="game-board">
             <div class="row board-row">
-              <div class="col-xs-4 game-cell">
+              <div class="col-xs-4 game-cell" id='1'>
               </div>
-              <div class="col-xs-4 game-cell">
+              <div class="col-xs-4 game-cell" id='2'>
               </div>
-              <div class="col-xs-4 game-cell">
-              </div>
-            </div>
-
-            <div class="row board-row">
-              <div class="col-xs-4 game-cell">
-              </div>
-              <div class="col-xs-4 game-cell">
-              </div>
-              <div class="col-xs-4 game-cell">
+              <div class="col-xs-4 game-cell" id='3'>
               </div>
             </div>
 
             <div class="row board-row">
-              <div class="col-xs-4 game-cell">
+              <div class="col-xs-4 game-cell" id='4'>
               </div>
-              <div class="col-xs-4 game-cell">
+              <div class="col-xs-4 game-cell" id='5'>
               </div>
-              <div class="col-xs-4 game-cell">
+              <div class="col-xs-4 game-cell" id='6'>
+              </div>
+            </div>
+
+            <div class="row board-row">
+              <div class="col-xs-4 game-cell" id='7'>
+              </div>
+              <div class="col-xs-4 game-cell" id='8'>
+              </div>
+              <div class="col-xs-4 game-cell" id='9'>
               </div>
             </div>
         </div>
