--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <header>
       <h1 class='title'>TIC-TAC-TOE</h1>
+  <!-- Container for sign in prompt pre sign-in and welcome-msg post sign in -->
       <div class='header-box'>
         <div id="sign-in-prompt" class = "sign-in-prompt">
           <form id="sign-in">
@@ -29,17 +30,12 @@
           </p>
         </div>
 
-          <!-- Initially hidden
+     <!-- Initially hidden
           Note:
-        - Find something better than span if possible
-        - Need to write jQuery to put username in place of willmcbride1 -->
+          - Find something better than span if possible -->
         <div class='user-welcome' id="user-welcome">
           <h4 class="welcome-msg"> Hi,
-            <span
-            id="user-name-welcome"
-            class="user-name-welcome">
-            <!-- styling placeholder -->
-            <!--willmcbride1-->></span>
+            <span id="user-name-welcome" class="user-name-welcome"></span>
           </h4>
           <button type="button" class="btn btn-default btn-lg cog-btn">
             <span class="glyphicon glyphicon-cog" aria-hidden="true"><!-- --></span>
@@ -74,13 +70,10 @@
                 </fieldset>
               </form>
             </div>
-            <!-- <div class="modal-footer">
-              <button type="button" class="btn btn-default" id="sign-up-button" data-dismiss="modal">Sign Up</button>
-            </div> -->
           </div>
         </div>
       </div>
-
+      <!-- successful sign up message and prompt to sign in -->
       <div class="modal fade" id="signUpSuccessModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
@@ -101,7 +94,7 @@
       </div>
 
 
-      <!-- initially hidden-->
+      <!-- initially hidden: change password form-->
       <form id="change-password">
         <fieldset>
           <legend>Change Password</legend>
@@ -113,7 +106,7 @@
         </fieldset>
       </form>
 
-      <!-- initially hidden -->
+      <!-- initially hidden: sign out button -->
       <form id="sign-out">
         <fieldset>
           <input type="submit" value="Sign Out">
@@ -123,6 +116,7 @@
 
     <hr>
     <main class='content'>
+      <!-- sign in failure warning message -->
       <div
       id="sign-in-failure"
       class="alert alert-danger sign-in-alert-danger"
@@ -132,11 +126,12 @@
         <span class="sr-only">Error:</span>
         The account email or password you entered is incorrect.
       </div>
-      <!-- Initially hidden-->
-      <!-- alert should trigger if new-game clicked before player sign in -->
+      <!-- new game button -->
       <button id="new-game-btn" class="new-game-button">
         <h3 class='new-game-text'>New Game</h3>
       </button>
+      <!-- Initially hidden: warning if attemp to play pre sign in-->
+      <!-- alert should trigger if new-game clicked before player sign in -->
       <div
       id="sign-in-warning"
       class="alert alert-danger no-sign-up-alert-danger"
@@ -155,7 +150,7 @@
             using placeholder currently-->
         <h2 id="player-turn" class="player-turn">Player X's Turn</h2>
 
-        <!--  Game Over Modal-->
+        <!--  GAME OVER MODAL-->
         <div class="modal fade" id="gameOverModal" tabindex="-1" role="dialog"
         aria-labelledby="myModalLabel">
           <div class="modal-dialog" role="document">
@@ -174,7 +169,7 @@
             </div>
           </div>
         </div>
-
+        <!-- GAME BOARD -->
         <div class="container game-board" id="game-board">
             <div class="row board-row">
               <div class="col-xs-4 game-cell" id='1'>
