Outline game logic
 - create winning scenarios

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <div class='container game-container' id='game-container'>
         <!-- Display of players turn
             using placeholder currently-->
-        <h2 id="player-turn" class="player-turn">Player X's Turn</h2>
+        <h2 id="player-turn" class="player-turn"></h2>
 
         <!--  GAME OVER MODAL-->
         <div class="modal fade" id="gameOverModal" tabindex="-1" role="dialog"
