Add empty div for winner, fix credit to bottom
Changes
- Add empty div called 'win-tie-msg'
- Fix created by credit to bottom left of screen
- Make html set to full height at large breakpoint

Bug
- Game overlaps with name from 1200px to 1273 px screen width

--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
         sign up</a> to start a new game.
       </div>
 
+      <!-- GAME OVER - WIN OR TIE MESSAGE
+          Initially hidden -->
+      <div class='win-tie-message' id='win-tie-message'>
+      </div>
 
       <div class='container game-container' id='game-container'>
         <!-- Display of players turn
