--- a/index.html
+++ b/index.html
@@ -37,9 +37,20 @@
           <h4 class="welcome-msg"> Hi,
             <span id="user-name-welcome" class="user-name-welcome"></span>
           </h4>
-          <button type="button" class="btn btn-default btn-lg cog-btn">
-            <span class="glyphicon glyphicon-cog" aria-hidden="true"><!-- --></span>
-          </button>
+          <div class="dropdown">
+            <button class="btn btn-default btn-lg dropdown-toggle cog-btn"
+                    type="button" id="cogMenu" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="true">
+              <span class="glyphicon glyphicon-cog" aria-hidden="true">
+              <!-- --></span>
+            </button>
+            <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
+              <li><a id="show-stats-btn">View Stats</a></li>
+              <li><a href="#">Change Password</a></li>
+              <li role="separator" class="divider"><!----></li>
+              <li><a href="#">Log Out</a></li>
+            </ul>
+          </div>
         </div>
       </div>
 
@@ -132,9 +143,9 @@
       </button>
       <!-- SHOW PLAYER STATS BUTTON
             INITIALLY HIDDEN -->
-      <button id="show-stats-btn" class="show-stats-btn">
+      <!-- <button id="show-stats-btn" class="show-stats-btn">
         <h3 class='btn-text'>Player Stats</h3>
-      </button>
+      </button> -->
       <!-- PLAYER STATS MODAL
             INITIALLY HIDDEN -->
       <div class="modal fade" id="showStatsModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -173,8 +184,7 @@
         Whoops! You must sign in or
         <a id="alert-sign-up" class="alert-link">
         sign up</a>
-        <br>
-        to start a new game or see stats.
+        to start a new game.
       </div>
 
       <!-- GAME OVER - WIN OR TIE MESSAGE
