--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="bundle.js" type="text/javascript" charset="utf-8" defer></script>
     <link href="https://fonts.googleapis.com/css?family=Bungee|Bungee+Shade|Rubik|VT323"
     rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="/favicon.png">
   </head>
 
   <body>
