Reformat HTML head
- prevent lines extending beyond 80 columns

--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
   <head>
     <title>TIC-TAC-TOE</title>
     <meta charset="utf-8">
-    <script src="vendor.bundle.js" type="text/javascript" charset="utf-8" defer></script>
-    <script src="bundle.js" type="text/javascript" charset="utf-8" defer></script>
-    <link href="https://fonts.googleapis.com/css?family=Bungee|Bungee+Shade|Rubik|VT323"
+    <script src="vendor.bundle.js"
+            type="text/javascript"
+            charset="utf-8"
+            defer></script>
+    <script src="bundle.js"
+            type="text/javascript"
+            charset="utf-8"
+            defer></script>
+    <link
+    href="https://fonts.googleapis.com/css?family=Bungee|Bungee+Shade|Rubik|VT323"
     rel="stylesheet">
-    <link rel="shortcut icon" type="image/png" href="/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="./favicon.png">
   </head>
 
   <body>
