Add function to play-again-button
  - Remove comment from play again button in the game over modal
  - Assign new game function to the button

--- a/index.html
+++ b/index.html
@@ -248,13 +248,13 @@
               <h3 class="modal--subtitle" id="gameResult"></h3>
               </div>
               <!-- PLAY AGAIN BUTTON include if there is time-->
-              <!-- <div class="modal-footer">
+              <div class="modal-footer">
                 <button
                     type="button" class="btn btn-default play-again"
                     id="play-again-button"
                     data-dismiss="modal">Play Again
                 </button>
-              </div> -->
+              </div>
             </div>
           </div>
         </div>
