Edit 'small' breakpoint width
Change 'small' breakpoint from 768px to 680px.

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       <!-- alert should trigger if new-game clicked before player sign in -->
       <div
       id="sign-in-warning"
-      class="alert alert-danger no-sign-up-alert-danger"
+      class="alert alert-danger no-sign-in-alert-danger"
       role="alert">
         <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true">
         <!-- --></span>
