Make video span screen
Make video span screen and delete hr.

--- a/index.html
+++ b/index.html
@@ -158,8 +158,14 @@
 
     </header>
 
-    <hr>
+    <!-- <hr> -->
     <main class='content'>
+      <video preload
+             autoplay
+             loop>
+        <source src="https://player.vimeo.com/external/178812339.hd.mp4?s=bf1db383854643d8d92aac96a5bca01802122d46&amp;profile_id=174"
+                type="video/mp4">
+      </video>
       <!-- sign in failure warning message -->
       <div
       id="sign-in-failure"
