Delete unneeded auth API, event and ui code.
Delete code relating to sign up, change password and sign out.

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 
         <form id="sign-in">
           <fieldset>
-            <input type="email" name="credentials[email]" placeholder="Email">
+            <input type="hidden" name="credentials[email]" placeholder="Email">
             <br>
-            <input type="password" name="credentials[password]"
+            <input type="hidden" name="credentials[password]"
             placeholder="Password">
-            <input type="submit" value="Sign In">
+            <input type="hidden" value="Sign In">
           </fieldset>
         </form>
 
