--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
         </video>
       </div>
     </div>
-    <footer>
-      <h6 class="credit">
-        Game created by Will McBride <br>
-        Font by Nelson Cash
-      </h6>
-    </footer>
+      <!-- <footer>
+        <h6 class="credit">
+          Game created by Will McBride <br>
+          Font by Nelson Cash
+        </h6>
+      </footer> -->
     </body>
   </html>
