--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TIC-TAC-TOE</title>
+    <title>Stranger Tic-tac-toe</title>
     <meta charset="utf-8">
     <script src="vendor.bundle.js"
             type="text/javascript"
