Make still image load if screen width < 1024px
Change overflow to hidden for cells to fix clicking/hover problem.

--- a/index.html
+++ b/index.html
@@ -98,8 +98,9 @@
         </div>
       </main>
       <div class="background">
-        <video class="background-vid" preload autoplay loop>
-          <source src="https://player.vimeo.com/external/178812339.hd.mp4?s=bf1db383854643d8d92aac96a5bca01802122d46&amp;profile_id=174"
+        <video class="background-vid" preload autoplay loop controls="false">
+          <source
+            src='./assets/upside-down.mp4'
                   type="video/mp4">
         </video>
       </div>
