Have working CSS and animations.
Bugs to fix:
  - No message when game is tied.
  - Fix css for vertical phone and tablet orientation
  - Better indication of game over.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             Initially hidden -->
         <div class='win-tie-message' id='win-tie-message'>
         </div>
-        <div id="play-again-btn" class="new-game-btn">
+        <div id="play-again-btn" class="new-game-btn play-again-btn">
           <h3 class='btn-text'>PLAY AGAIN</h3>
         </div>
 
