Revert to desired commit

--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
       </main>
       <div class="background">
         <video class="background-vid" preload autoplay loop controls="false">
-          <source
-            src='./assets/upside-down.mp4'
-                  type="video/mp4">
+          <source src='./assets/upside-down.mp4' type="video/mp4">
         </video>
       </div>
     </div>
